--- a/package.json
+++ b/package.json
@@ -18,5 +18,5 @@
     "scripts": {
          "test": "vows test/* --spec"
     },
-    "engines": { "node": "*" }
+    "engines": { "node": "0.6.*" }
 }
