exteded parameters and tests

--- a/examples/config.json
+++ b/examples/config.json
@@ -1,6 +1,6 @@
 {
     "input": ["b-resources/b-resources.css", "b-includes/b-includes.css"],
     "output": "_all.css",
-    "compile": false,
+    "compress": false,
     "base64": true
 }
