--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "styletto",
     "description": "CSS assets manager",
-    "version": "0.2.7",
+    "version": "0.2.8",
     "keywords": ["asset management", "css"],
     "homepage": "http://github.com/iadramelk/styletto",
     "author": "Alexey Ivanov <iadramelk@gmail.com>",
@@ -12,8 +12,7 @@
         "csso": "*",
         "stylus": "*",
         "css-compressor": "*",
-        "nib": "*",
-        "canvas": "*"
+        "nib": "*"
     },
     "devDependencies": {
         "vows": "*"
