--- a/package.json
+++ b/package.json
@@ -22,5 +22,5 @@
     "scripts": {
          "test": "vows test/* --spec"
     },
-    "engines": { "node": ">=0.6 =<0.8" }
+    "engines": { "node": ">=0.8" }
 }
