Full refactoring to version 0.3.0

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "csso": "*",
         "css-compressor": "*",
         "stylus": "*",
-        "nib": "*"
+        "nib": "*",
+        "less": "*"
     },
     "devDependencies": {
         "vows": "*"
