--- a/examples/config.json
+++ b/examples/config.json
@@ -2,5 +2,6 @@
     "input": ["b-resources/b-resources.css", "b-includes/b-includes.css"],
     "output": "_all.css",
     "compress": false,
-    "base64": true
+    "base64": true,
+    "nib": "vendor"
 }
