Changed nib version to 0.8.* in package.json

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "csso": "*",
         "css-compressor": "*",
         "stylus": "*",
-        "nib": "*",
+        "nib": "0.8.*",
         "less": "*"
     },
     "devDependencies": {
